# parser_TGC1

./: .env_template  .gitignore  README.md  pyproject.toml  requirements.txt
Parser_TGC1/: main.py  nodes.txt  parser.py  report.py
